--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=telegram-bot
-DB_USERNAME=phpmyadmin
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.pangia.biz
+MAIL_PORT=465
+MAIL_USERNAME=democrito@olinda.pe.gov.br
+MAIL_PASSWORD=Hellman!2018
+MAIL_ENCRYPTION=SSL
+MAIL_FROM_ADDRESS=democrito@olinda.pe.gov.br
+MAIL_FROM_NAME="Demócrito Anunciação"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
