--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=telegram-bot
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:dVF4uP8mZVw5lpBzGKdBSrKvMBKmB7wj4ypzEqoaPic=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=telegram-bot
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -23,14 +23,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=<pop ou smtp>
+MAIL_HOST=<ex: smtp.pangia.biz>
+MAIL_PORT=<se estiver usando SSL, deve ser 465>
+MAIL_USERNAME=<endereço de e-mail do usuário>
+MAIL_PASSWORD=<senha do email do usuário>
+MAIL_ENCRYPTION=SSL
+MAIL_FROM_ADDRESS=<endereço de email do enviador>
+MAIL_FROM_NAME="Nome de quem está enviando"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -44,3 +44,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+TELEGRAM_BOT_TOKEN=1223173692:AAEsUm2gUD41Ovbz2mmHk6NwzdI6CIasNUs
