--- a/.env
+++ b/.env
@@ -46,4 +46,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-TELEGRAM_BOT_TOKEN=1223173692:AAEsUm2gUD41Ovbz2mmHk6NwzdI6CIasNUs
+TELEGRAM_BOT_TOKEN=<pergunte ao @BotFather no telegram o comando /mybots para saber o token do seu robô>
