--- a/.env
+++ b/.env
@@ -23,14 +23,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.pangia.biz
-MAIL_PORT=465
-MAIL_USERNAME=democrito@olinda.pe.gov.br
-MAIL_PASSWORD=Hellman!2018
-MAIL_ENCRYPTION=SSL
-MAIL_FROM_ADDRESS=democrito@olinda.pe.gov.br
-MAIL_FROM_NAME="Demócrito Anunciação"
+MAIL_MAILER=<pop3 ou smtp>
+MAIL_HOST=<o host do protocolo usado. ex: smtp.pangia.biz>
+MAIL_PORT=<Se usar encriptação SSL, a porta deve ser 465>
+MAIL_USERNAME=<sua conta de e-mail>
+MAIL_PASSWORD=<sua senha do e-mail>
+MAIL_ENCRYPTION=<ex: SSL>
+MAIL_FROM_ADDRESS=<o endereço de email que enviará. ex: naoresponda@mail.com>
+MAIL_FROM_NAME=<"Nome do enviador">
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
