--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=telegram-bot
 APP_ENV=local
-APP_KEY=base64:dVF4uP8mZVw5lpBzGKdBSrKvMBKmB7wj4ypzEqoaPic=
+APP_KEY=base64:ovHxksHbMbaN3mFKX7Qkoceha4vkyRC8M6Rq8tLQIWY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,7 +10,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=telegram-bot
-DB_USERNAME=phpmyadmin
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
